--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "axios": "^1.6.0",
     "core-js": "^3.8.3",
+    "marked": "^17.0.3",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0"
   },
